Ajout de la création de compte avec un code activation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,11 @@ spring.jpa.properties.hibernate.format_sql=true
 # Permet de lire et lancer les fichiers SQL s'appelant précisément "schema-${postgresql}.sql" et "data.sql"
 #spring.jpa.generate-ddl=false
 #spring.datasource.initialization-mode=always
+
+
+spring.mail.host=sandbox.smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=a0b412c891a8c5
+spring.mail.password=550c790d07e36d
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
