Correxion du système de connexion et des accès pours les cors

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port=80
+server.port=8080
 
 # Nom de l'url qui remplacera le 80 ou 8080
-server.servlet.context-path=/api
-spring.mvc.locale-resolver=fixed
+#server.servlet.context-path=/api
+#spring.mvc.locale-resolver=fixed
 
 #Permet d'appliquer directement les modifications lorsque l'on recharge la page sans avoir besoin de rebuild
 #spring.web.resources.static-locations=file:src/main/resources/static/
@@ -28,3 +28,6 @@ spring.mail.username=a0b412c891a8c5
 spring.mail.password=550c790d07e36d
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+logging.level.org.springframework.security=DEBUG
