--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,4 +30,4 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 
-logging.level.org.springframework.security=DEBUG
+#logging.level.org.springframework.security=DEBUG
