--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,11 @@
 			<version>0.12.5</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<build>
